--- a/Frontend/Backoffice/Adaptado/index.html
+++ b/Frontend/Backoffice/Adaptado/index.html
@@ -530,11 +530,12 @@
 
                         <div class="progress-group">
                           0-6 anos
-                          <span class="float-right"><b>40</b>/200</span>
+                          <span class="float-right" id="nTotal" value=""><b></b></span>
                           <div class="progress progress-sm">
                             <div
                               class="progress-bar bg-primary"
-                              style="width: 40%"
+                              id="Perc0e6"
+                              style="width: 0%"
                             ></div>
                           </div>
                         </div>
@@ -542,11 +543,12 @@
 
                         <div class="progress-group">
                           7-11 anos
-                          <span class="float-right"><b>60</b>/200</span>
+                          <span class="float-right" id="nTotal2" value=""><b></b></span>
                           <div class="progress progress-sm">
                             <div
                               class="progress-bar bg-danger"
-                              style="width: 50%"
+                              id="Perc7e11"
+                              style="width: 0%"
                             ></div>
                           </div>
                         </div>
@@ -554,11 +556,12 @@
                         <!-- /.progress-group -->
                         <div class="progress-group">
                           <span class="progress-text">12-15 anos</span>
-                          <span class="float-right"><b>30</b>/200</span>
+                          <span class="float-right" id="nTotal3" value=""><b></b></span>
                           <div class="progress progress-sm">
                             <div
                               class="progress-bar bg-success"
-                              style="width: 35%"
+                              id="Perc12e15"
+                              style="width: 0%"
                             ></div>
                           </div>
                         </div>
@@ -566,11 +569,12 @@
                         <!-- /.progress-group -->
                         <div class="progress-group">
                           16-18 anos
-                          <span class="float-right"><b>70</b>/200</span>
+                          <span class="float-right" id="nTotal4" value=""><b></b></span>
                           <div class="progress progress-sm">
                             <div
                               class="progress-bar bg-warning"
-                              style="width: 55%"
+                              id="Perc16e18"
+                              style="width: 0%"
                             ></div>
                           </div>
                         </div>
