--- a/Frontend/Backoffice/Adaptado/pages/calendar.html
+++ b/Frontend/Backoffice/Adaptado/pages/calendar.html
@@ -350,7 +350,7 @@
                       <div class="input-group">
                         <form
                           method="POST"
-                          action="http://161.230.18.89:8080/DAI_backend/register_activity"
+                          action="http://localhost:8080/DAI_backend/register_activity"
                         >
                           <div class="form-group">
                             <input
