--- a/Frontend/Backoffice/Adaptado/pages/examples/profile.html
+++ b/Frontend/Backoffice/Adaptado/pages/examples/profile.html
@@ -395,7 +395,7 @@
             <div class="modal-body">
               <form
                 method="PUT"
-                action="http://161.230.18.89:8080/DAI_backend/update_institution"
+                action="http://localhost:8080/DAI_backend/update_institution"
               >
                 <div class="input-group mb-3">
                   <input
