--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -106,7 +106,7 @@
           </div>
           <div class="modal-body">
             <!-- <form action="/Frontend/Backoffice/Adaptado/index.html"> -->
-              <form action ="http://161.230.18.89:8080/DAI_backend/login"  method ="POST" class="form"></form>
+              <form action ="http://localhost:8080/DAI_backend/login"  method ="POST" class="form"></form>
               <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" name="email" placeholder="email" id="email" />
