--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html
@@ -105,8 +105,9 @@
             </button>
           </div>
           <div class="modal-body">
+            
             <!-- <form action="/Frontend/Backoffice/Adaptado/index.html"> -->
-              <form action ="http://localhost:8080/DAI_backend/login"  method ="POST" class="form"></form>
+              <form action="http://localhost:8080/DAI_backend/login1"  method ="POST" class="form">
               <div class="form-group">
                 <label for="email">Email:</label>
                 <input type="email" class="form-control" name="email" placeholder="email" id="email" />
@@ -123,7 +124,7 @@
               <!--<a href="http://127.0.0.1:5500/Frontend/Backoffice/Adaptado/index.html" class="btn btn-primary btn-user btn-block">
                 Login
               </a>-->
-            <button class="btn btn-default" type="submit" id="SumbitLogin" onclick="getCookie()">Entrar</button>
+            <button class="btn btn-default" type="submit" id="SumbitLogin">Entrar</button>
             </form>
           </div>
         </div>
