--- a/Frontend/Backoffice/Adaptado/index.html
+++ b/Frontend/Backoffice/Adaptado/index.html
@@ -146,20 +146,23 @@
               </div>
               <br />
               <!-- esta opção só aparece para as camaras -->
-              <div style="background-color: #8f9dc3">
-                <li class="nav-item">
-                  <a
-                    href="/Frontend/Backoffice/Adaptado/pages/tables/data.html"
-                    class="nav-link"
-                  >
-                    <i class="nav-icon far fa-calendar-alt"></i>
-                    <p style="padding-top: 10px; padding-bottom: 10px">
-                      Atividades
-                      <!-- <span class="right badge badge-danger">New</span> -->
-                    </p>
-                  </a>
-                </li>
-              </div>
+              <section id="opcao1">
+                <div style="background-color: #8f9dc3">
+                  <li class="nav-item">
+                    <a
+                      href="/Frontend/Backoffice/Adaptado/pages/tables/data.html"
+                      class="nav-link"
+                    >
+                      <i class="nav-icon far fa-calendar-alt"></i>
+                      <p style="padding-top: 10px; padding-bottom: 10px">
+                        Atividades
+                        <!-- <span class="right badge badge-danger">New</span> -->
+                      </p>
+                    </a>
+                  </li>
+                </div>
+              </section>
+              <!-- esta opção só aparece para as camaras -->
               <br />
               <!-- esta opção só aparece para as instituições -->
               <div style="background-color: #8f9dc3">
