--- a/Frontend/Backoffice/Adaptado/pages/calendar.html
+++ b/Frontend/Backoffice/Adaptado/pages/calendar.html
@@ -260,10 +260,18 @@
                     <div class="card-header">
                       <h4 class="card-title">Atividades</h4>
                     </div>
-                    <div class="card-body">
+                    <div
+                      class="card-body"
+                      style="
+                        width: 100%;
+                        height: 15rem;
+                        overflow-y: auto;
+                        overflow-x: hidden;
+                      "
+                    >
                       <!-- the events -->
                       <div id="external-events">
-                        <div
+                        <!-- <div
                           class="external-event bg-success"
                           data-toggle="modal"
                           data-target="#MaisInfo2"
@@ -297,7 +305,8 @@
                           data-target="#MaisInfo"
                         >
                           Sleep tight
-                        </div>
+                        </div> -->
+                        <div id="PostWrapper"></div>
                         <div class="checkbox">
                           <label for="drop-remove">
                             <input type="checkbox" id="drop-remove" />
@@ -478,43 +487,43 @@
               <form>
                 <div class="form-row">
                   <div class="form-group col-md-8">
-                    <label for="inputEmail4">Nome da atividade</label>
-                    <input type="text" class="form-control" id="inputEmail4" />
+                    <label for="nomeDaAtividade">Nome da atividade</label>
+                    <input type="text" class="form-control" id="nomeDaAtividade" value=""/>
                   </div>
                   <div class="form-group col-md-4">
-                    <label for="inputPassword4">Local</label>
+                    <label for="cidadeDaAtividade">Cidade</label>
                     <input
                       type="text"
                       class="form-control"
-                      id="inputPassword4"
+                      id="cidadeDaAtividade"
                     />
                   </div>
                 </div>
                 <div class="form-row">
                   <div class="form-group col-md-6">
-                    <label for="inputEmail4">Data de inicio</label>
+                    <label for="diDaAtividade">Data de inicio</label>
                     <input
                       type="text"
                       class="form-control"
-                      id="inputEmail4"
+                      id="diDaAtividade"
                       readonly
                     />
                   </div>
                   <div class="form-group col-md-6">
-                    <label for="inputPassword4">Data de fim</label>
+                    <label for="dfDaAtividade">Data de fim</label>
                     <input
                       type="text"
                       class="form-control"
-                      id="inputPassword4"
+                      id="dfDaAtividade"
                       readonly
                     />
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlTextarea1">Descrição</label>
+                  <label for="dDaAtividade">Descrição</label>
                   <textarea
                     class="form-control"
-                    id="exampleFormControlTextarea1"
+                    id="dDaAtividade"
                     rows="3"
                     style="resize: none"
                   ></textarea>
@@ -604,6 +613,8 @@
     <script src="/Frontend/Backoffice/Adaptado/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
     <!-- Select2 -->
     <script src="/Frontend/Backoffice/Adaptado/plugins/select2/js/select2.full.min.js"></script>
+    <!-- Controller -->
+    <script src="/Frontend/Backoffice/Adaptado/controllers/controller_calendarioInstituicao.js"></script>
     <!-- Page specific script -->
     <script>
       $(function () {
