--- a/Frontend/Backoffice/Adaptado/pages/examples/profile.html
+++ b/Frontend/Backoffice/Adaptado/pages/examples/profile.html
@@ -254,7 +254,10 @@
               <!-- esta opção aparece sempre -->
               <div style="background-color: #8f9dc3">
                 <li class="nav-item">
-                  <a href="#" class="nav-link">
+                  <a
+                    href="/Frontend/FrontOffice/bizpage-master/bizpage-master/index.html"
+                    class="nav-link"
+                  >
                     <i class="nav-icon fas fa-house-user"></i>
                     <p style="padding-top: 10px; padding-bottom: 10px">
                       Logout
